# Operation

./: .env.example  AGENTS.md  README.md  backtest.py  bot.py  main.py  pyproject.toml  run_pytest_diagnostics.sh  run_remaining_test_results.sh
.github/: pull_request_template.md
docs/: LIMITED_UNATTENDED_CHECKLIST.md  OPERATIONS_STATE_MACHINE.md  OPERATOR_REPORTING.md  RUNBOOK.md  architecture-boundaries.json  cash-drift-report.md  config-reference.md  live-submit-authority.md  live_dry_run_checklist.md  live_incident_runbook.md  lot_native_contract.md  operation-research-dependency-inventory.md  paper-execution-lifecycle.md  portfolio-allocation-authority.md  pre-merge-checklist.md  research-validation.md  runtime-data-policy.md  runtime-scope.md  storage-layout.md  strategy-plugin-authoring.md
examples/strategy_plugin_package/: example_strategy_plugin.py  pyproject.toml
scripts/: backup_sqlite.sh  check_fast_test_durations.py  check_live_runtime.sh  check_lot_native_authority_residue.sh  check_pytest_duration_inventory.py  check_repo_runtime_artifacts.sh  check_research_test_policy.py  codex_pytest_repair_prompt.md  codex_request.example.txt  codex_request.txt  collect_live_snapshot.sh  collect_pytest_perf_baseline.py  full_suite.sh  healthcheck.py  make_failure_packet.sh  mobile_pytest_run.sh  mobile_run.sh  path_query.py  remote_verify_live.sh  repair_zero_price_sell_ledger.py  run_codex_pipeline.sh  run_codex_pytest_pipeline.sh  run_fast_pr_tests.sh  run_full_pytest_tests.sh  run_operation_tests.sh  run_parallel_research_safety_tests.sh  run_research_nightly_tests.sh  run_xdist_worksteal_diagnostics.sh
tests/: conftest.py  fakes.py  test_accounting_projection.py  test_analytics_context.py  test_approved_profile.py  test_artifact_hashing.py  test_attribution_quality_signals.py  test_backtest_kernel_contract.py  test_backtest_stage_runner_canonical_cache.py  test_backup_sqlite_script.py  test_bootstrap.py  test_canary_non_sma_plugin_architecture.py  test_candle_processing_stability.py  test_canonical_decision.py  test_canonical_decision_hash_reuse.py  test_ci_workflow_policy.py  (+290 more)
(+416 files in other folders)
