[project]
name = "operation"
version = "0.1.0"
description = "Safety-first offline strategy operation and execution runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[project.scripts]
operation = "operation.bootstrap:run_cli"

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["."]
tmp_path_retention_count = 1
tmp_path_retention_policy = "failed"
markers = [
    "fast_regression: quick deterministic regression checks for dust, auth, and order-validation behavior",
    "slow_integration: slower live-like or restart/reconcile integration checks",
    "lot_native_regression_gate: required lot-native authority gate covering SELL authority, dust suppression, partial-fill recovery, and restart/reconcile preservation",
    "unit: isolated unit tests",
    "contract: payload, hash, gate, and schema contract tests with fake or direct lower-level inputs",
    "integration: multi-module tests expected to stay below E2E runtime",
    "notification_transport_mock: notifier transport-internal tests that must use mocked HTTP clients only",
]
