[project]
name = "operation-strategy-plugin-example"
version = "0.1.0"
description = "Example external strategy plugin package for operation"
requires-python = ">=3.11"
dependencies = ["operation"]

[project.entry-points."operation.strategy_plugins"]
example_research_only = "example_strategy_plugin:LEVEL_1_RESEARCH_ONLY_PLUGIN"
example_replay_compatible = "example_strategy_plugin:LEVEL_2_REPLAY_COMPATIBLE_PLUGIN"
example_promotion_grade = "example_strategy_plugin:LEVEL_3_PROMOTION_GRADE_PLUGIN"
